@@ -15,6 +15,11 @@ public:
 
   bool nameExists(std::string name);
   bool createGroup(std::string groupname);
+  bool renameGroup(std::string groupname, std::string new_groupname);
+  bool deleteGroup(std::string groupname);
+
+  bool deleteDataset(std::string name,std::string groupname);
+
 
   //int
   bool read_dataset_int_rank_1(std::string name, std::string groupname, std::vector<int> &data); // read dataset
